   * play an "anonymous" music durin ennemy turns to avoid the music giving
   hints in MP games
   * enable down arrow on scrollbar when resizing (#4809, patch #487)
   * better movement highlighting (patch #488)
   * stop save dialog complaining about bad name when pressing cancel (#4835)
   * pressing 'n' wont take you out of path selection mode (#4833, patch #490)
 * graphics:
   * units can now have colors redefined to match team colors:
   * team color can be defined in the side tag with "team_rgb=r,g,b"
   * team color enabled for:
       Knight, Grand Knight
   * new title screen and logo
   * changed the storm trident attack icon from fireball to lightingbolt
   * new attack icon for the fireball
   * portraits:
     * new Li'sar, Drake Burner, Drake Fighter, Drake Glider, Elvish Shaman,
       Ghoul, Mermaid Initiate, Merman Fighter, Merman Hunter, Naga Fighter,
       Orcish Assassin, Saurian Skirmisher
     * all Drake, Merman, Naga and Saurian upgrades now use level one portraits
     * Necrophage and Orcish Slayer upgrades now use level one portraits
   * new images: Konrad level 1, Tentacle of the Deep
   * new death animations: Initiate, Mage, Pikeman, Red Mage, White Mage,
     Tentacle of the Deep
   * removed deprecated death animation: Drake Fighter
   * new tiles: swamp, cave wall, paved road, variable-width canyon (#8817)
   * new villages: snow (human & elven), underground
   * updated snow hills and hills
   * new mountains
 * language and i18n:
   * added support for right-to-left languages (patch #470)
   * made the list of languages configurable via the locale WML
   * new manual: Chinese; updated manual: English, German, Swedish
   * updated man pages: Swedish
   * new translations: Hebrew, Portugese
   * updated translations: Afrikaans, British English, Chinese, Czech, French,
     German, Hungarian, Italian, Japanese, Polish, Portuguese (Brazil), Russian,
     Slovak, Slovenian, Spanish, Swedish, Turkish