@@ -66,6 +66,7 @@ SVN trunk (1.1.x):
    * better movement highlighting (patch #488)
    * stop save dialog complaining about bad name when pressing cancel (#4835)
    * pressing 'n' wont take you out of path selection mode (#4833, patch #490)
+   * fix broken tooltip in the status bar for plague(argument)
  * graphics:
    * units can now have colors redefined to match team colors:
    * team color can be defined in the side tag with "team_rgb=r,g,b"
